k8s/frontend-deployment.yml
# k8s/frontend-deployment.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: taskmanager
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: wdhanan/taskmanager-frontend:latest
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: taskmanager
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
